# NorwegianBlue

./: CHANGELOG.md  Makefile  Makefile.am  README.md  configure.ac
src/: DFA.c++  DFA.h++  Learner.c++  Learner.h++  MDL.c++  Markov.c++  Markov.h++  aux.c++  aux.h++  declarations.h++  norwegian.h++  regexparser.c++  regexparser.h++  stringcodec.c++  stringcodec.h++
test/: benchmark.cpp  testgtest.cpp
tools/: ftdecode.c++  ftencode.c++  learndfa.c++
